WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58735
Crash when NPP_Write returns -1 when writing the manual stream
https://bugs.webkit.org/show_bug.cgi?id=58735
Summary
Crash when NPP_Write returns -1 when writing the manual stream
Anders Carlsson
Reported
2011-04-16 14:19:14 PDT
Crash when NPP_Write returns -1 when writing the manual stream
Attachments
Patch
(1.31 KB, patch)
2011-04-16 14:21 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-04-16 14:21:17 PDT
Created
attachment 89934
[details]
Patch
Anders Carlsson
Comment 2
2011-04-16 14:22:37 PDT
Committed
r84095
: <
http://trac.webkit.org/changeset/84095
>
WebKit Review Bot
Comment 3
2011-04-17 17:22:07 PDT
http://trac.webkit.org/changeset/84095
might have broken Windows XP Debug (Tests) The following tests are not passing: dom/html/level2/html/HTMLFrameElement01.html dom/html/level2/html/HTMLFrameElement02.html dom/html/level2/html/HTMLFrameElement03.html dom/html/level2/html/HTMLFrameElement04.html dom/html/level2/html/HTMLFrameElement05.html dom/html/level2/html/HTMLFrameElement06.html dom/html/level2/html/HTMLFrameElement07.html dom/html/level2/html/HTMLFrameElement08.html dom/html/level2/html/HTMLFrameElement09.html dom/html/level2/html/HTMLFrameSetElement01.html dom/html/level2/html/HTMLFrameSetElement02.html dom/html/level2/html/HTMLIFrameElement01.html dom/html/level2/html/HTMLIFrameElement02.html dom/html/level2/html/HTMLIFrameElement03.html dom/html/level2/html/HTMLIFrameElement04.html dom/html/level2/html/HTMLIFrameElement05.html dom/html/level2/html/HTMLIFrameElement06.html dom/html/level2/html/HTMLIFrameElement07.html dom/html/level2/html/HTMLIFrameElement08.html dom/html/level2/html/HTMLIFrameElement09.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug