2011-04-16  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Crash when NPP_Write returns -1 when writing the manual stream
        https://bugs.webkit.org/show_bug.cgi?id=58735
        <rdar://problem/9124993>

        If NPP_Write returns -1 we must cancel the stream.

        * WebProcess/Plugins/Netscape/NetscapePluginStream.cpp:
        (WebKit::NetscapePluginStream::deliverDataToPlugin):


Canonical link: https://commits.webkit.org/73836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84095 268f45cc-cd09-0410-ab3c-d52691b4dbfc